# test-commitizen

./: README.md
.github/workflows/: release.yaml
folding-cli/: pyproject.toml
folding-database/: .cz.toml  pyproject.toml
