[tool.poetry]
name = "folding-database"
version = "0.4.0"
description = ""
authors = ["AchilleSoulieID <a.soulie@instadeep.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.29.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.4.0"
tag_format = "database-v$version"
version_files = [
  "pyproject.toml:^version",
]